# dias_uteis

./: .gitignore  LICENSE  README.md  dias_uteis.py  pyproject.toml  tests.py
__dias_uteis/: __init__.py  business_days.py
dias_uteis/: __init__.py  __init__.pyi  business_days.py
tests/: test_dias_uteis.py
