[tool.poetry]
name = "dias-uteis"
version = "0.1.6"
description = ""
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"
packages = [{include = "dias_uteis"}]
repository = "https://github.com/renanmoretto/dias_uteis"


[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"