[tool.poetry]
name = "dias-uteis"
version = "0.1.12"
description = "Ferramentas para cálculos de dias úteis no calendário brasileiro."
authors = ["renanmoretto <himynameisrenan@outlook.com>"]
readme = "README.md"
repository = "https://github.com/renanmoretto/dias_uteis"


[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"